Finalize login module and validations

--- a/corelib/webApp/WebApp/WebApp/Views/Account/Login.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
 <div class="wrapper-page">
 
     <div class="text-center">
-        <a href="index.html" class="logo logo-lg"><i class="fa fa-bars"></i> <span>Online FASTrax</span> </a>
+        <a href="/" class="logo logo-lg"><i class="ti-truck"></i> <span>Online FASTrax</span> </a>
     </div>
 
     @if (ViewData.ModelState[""] != null && ViewData.ModelState[""].Errors.Count() > 0)
@@ -24,55 +24,155 @@
         </div>
     }
  
-    <form class="form-horizontal m-t-20" action="/Account/Login?" method="post" novalidate data-parsley-validate id="login-form" runat="server">
+    <form class="form-horizontal m-t-20" method="post" action="/Account/Login?" novalidate data-parsley-validate id="login-form">
         @Html.AntiForgeryToken()
-        <div class="form-group">
-            <div class="col-xs-12">
-                <input type="text" data-val="true" data-val-required="Username Required" id="usernameInput" name="username" class="form-control" placeholder="Username" required autofocus value="@username">
-                <i class="md md-account-circle form-control-feedback l-h-34"></i>
-            </div>
+
+        <h4 class="text-center">Lost Password</h4>
+
+        <div class="alert alert-success alert-dismissable user-notif" style="display:none;">
+            @*<button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>*@
+            <span>content</span>
         </div>
 
-        <div class="form-group">
-            <div class="col-xs-12">
-                <input type="password" data-val="true" data-val-required="Password Required" name="password" id="passwordInput" class="form-control" placeholder="Password" required value="@password">
-                <i class="md md-vpn-key form-control-feedback l-h-34"></i>
+        <div id="forget-password-form" style="display:none;">
+
+            <div class="form-group">
+                <div class="col-xs-12">
+                    <input type="email" data-val="true" data-val-required="Email Required" id="email-add" name="email" class="form-control" placeholder="Email" required autofocus>
+                    <i class="md md-email form-control-feedback l-h-34"></i>
+                    <span class="help-block"><small>Please enter your account's e-mail address. You will receive a link to continue the process.</small></span>
+                </div>
             </div>
+
+            <div class="form-group text-right m-t-20">
+                <div class="col-xs-12">
+                    <a class="submit-form btn btn-primary btn-custom w-md waves-effect waves-light" id="reset-password">
+                        Continue
+                    </a>
+                </div>
+            </div>
+
+            <div class="form-group m-t-30">
+                <div class="col-sm-7">
+                    <a href="#" class="text-muted" id="back">
+                        <i class="fa fa-key m-r-5"></i> Back to login
+                    </a>
+                </div>
+            </div>
+
         </div>
 
-        <div class="form-group">
-            <div class="col-xs-12">
-                <div class="checkbox checkbox-primary">
-                    @{ var isChecked = ""; if (Convert.ToBoolean(@rememberMe) == true) { isChecked = "checked"; } }
-                    <input data-val="true" data-val-required="The Remember Me field is required." id="checkbox-signup" name="RememberMe" type="checkbox" value="true" @isChecked>
-                    <label for="checkbox-signup">
-                        Remember me
-                    </label>
+        <div id="login-user-form">
+            <div class="form-group">
+                <div class="col-xs-12">
+                    <input type="text" data-val="true" data-val-required="Username Required" id="usernameInput" name="username" class="form-control" placeholder="Username" required autofocus value="@username">
+                    <i class="md md-account-circle form-control-feedback l-h-34"></i>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-xs-12">
+                    <input type="password" data-val="true" data-val-required="Password Required" name="password" id="passwordInput" class="form-control" placeholder="Password" required value="@password">
+                    <i class="md md-vpn-key form-control-feedback l-h-34"></i>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-xs-12">
+                    <div class="checkbox checkbox-primary">
+                        @{ var isChecked = ""; if (Convert.ToBoolean(@rememberMe) == true) { isChecked = "checked"; } }
+                        <input data-val="true" data-val-required="The Remember Me field is required." id="checkbox-signup" name="RememberMe" type="checkbox" value="true" @isChecked>
+                        <label for="checkbox-signup">
+                            Remember me
+                        </label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group text-right m-t-20">
+                <div class="col-xs-12">
+                    <a class="submit-form btn btn-primary btn-custom w-md waves-effect waves-light" id="login-user">
+                        Log In
+                    </a>
+                </div>
+            </div>
+
+            <div class="form-group m-t-30">
+                <div class="col-sm-7">
+                    <a href="#" class="text-muted" id="show-reset-password">
+                        <i class="fa fa-lock m-r-5"></i> Forgot your
+                        password?
+                    </a>
                 </div>
             </div>
         </div>
 
-        <div class="form-group text-right m-t-20">
-            <div class="col-xs-12">
-                <button class="btn btn-primary btn-custom w-md waves-effect waves-light" type="submit">
-                    Log In
-                </button>
-            </div>
-        </div>
-
-        <input type="hidden" name="ReturnUrl" id="activeURL" class="form-control">
-
-
-        <div class="form-group m-t-30">
-            <div class="col-sm-7">
-                <a href="pages-recoverpw.html" class="text-muted">
-                    <i class="fa fa-lock m-r-5"></i> Forgot your
-                    password?
-                </a>
-            </div>
-            <div class="col-sm-5 text-right">
-                <a href="pages-register.html" class="text-muted">Create an account</a>
-            </div>
-        </div>
     </form>
 </div>
+
+@section scripts{
+<script>
+
+    var $resetPassword = $('#forget-password-form'),
+        $notifContainer = $('.user-notif'),
+        $loginUser = $('#login-user-form'),
+        $loginForm = $('#login-form');
+
+    $('#show-reset-password').on('click', function () {
+        $loginForm[0].reset();
+        $loginUser.hide();
+        $notifContainer.hide();
+        $resetPassword.fadeIn();
+    })
+
+    $('#back').on('click', function () {
+        $loginForm[0].reset();
+        $resetPassword.hide();
+        $notifContainer.hide();
+        $loginUser.fadeIn()
+    })
+
+    $(document).on('click', '.submit-form', function (e) {
+
+        e.preventDefault();
+        e.stopImmediatePropagation();
+
+        if ($(this).attr('id') == "reset-password"){
+            
+            $loginForm.parsley().validate();
+
+            if ($loginForm.parsley().isValid()) {
+
+                $loadJsonResult("/Account/PasswordResetRequest?", new FormData($loginForm[0]), function (response) {
+
+                    if (response.isSuccess) {
+                        $loginForm[0].reset();
+                        $loginUser.hide();
+                        $('.user-notif').removeClass('alert-danger');
+                        $('.user-notif').addClass('alert-success');
+                        $('.user-notif span').html(response.message + " <a href='/'>Login</a>");
+                        $notifContainer.fadeIn();
+                    }
+                    else {
+                        $('.user-notif').removeClass('alert-success');
+                        $('.user-notif').addClass('alert-danger');
+                        $('.user-notif span').html(response.message);
+                        $notifContainer.fadeIn();
+                    }
+
+                });
+            }
+        }
+        else {
+
+            $('#email-add').removeAttr('required');
+            $loginForm.parsley().validate();
+
+            if ($loginForm.parsley().isValid())
+                $loginForm.submit();
+        }
+
+    });
+
+</script>
+}
