--- a/corelib/webApp/WebApp/WebApp/Views/Dealers/Index.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Dealers/Index.cshtml
@@ -7,9 +7,9 @@
         <li><a href="/Dealers">Dealers</a></li>
         <li class="">List</li>
         <li class="breadcrumb-action">
-            <a data-toggle="tooltip" data-placement="left" data-original-title="Create new supplier" href="#" class="btn btn-success waves-effect w-md waves-light m-b-5" id="add-new-dealer">Add</a>
-            <a style="display:none;" data-toggle="tooltip" data-placement="left" data-original-title="Update new supplier" href="#" class="btn btn-success waves-effect w-md waves-light m-b-5" id="update-dealer">Apply Changes</a>
-            <button style="display:none;" data-toggle="tooltip" data-placement="left" data-original-title="Refresh to revert changes" type="button" class="btn btn-default waves-effect w-md m-b-5" id="refresh-dealer">Refresh</button>
+            <a data-toggle="tooltip" data-placement="left" data-original-title="Create new supplier" href="#" class="btn btn-success waves-effect waves-light m-b-5" id="add-new-dealer">Add</a>
+            <a style="display:none;" data-toggle="tooltip" data-placement="left" data-original-title="Update new supplier" href="#" class="btn btn-success waves-effect waves-light m-b-5" id="update-dealer">Apply Changes</a>
+            <button style="display:none;" data-toggle="tooltip" data-placement="left" data-original-title="Refresh to revert changes" type="button" class="btn btn-default waves-effect m-b-5" id="refresh-dealer"><i class="fa fa-refresh"></i></button>
         </li>
     </ol>
 </div>
