--- a/corelib/webApp/WebApp/WebApp/Views/Shared/_loginLayout.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Shared/_loginLayout.cshtml
@@ -52,6 +52,7 @@
 
     @* parsley form validation *@
     <script src="../../Content/theme/js/parsley.min.js"></script>
+    <script src="../../Scripts/app/generic.js"></script>
 
     @RenderSection("scripts", required: false)
 
