--- a/corelib/webApp/WebApp/WebApp/Views/Dealers/dealers.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Dealers/dealers.cshtml
@@ -286,8 +286,8 @@
                                                 <td valign="middle" style="white-space: normal;">@item.FileSize </td>
                                                 <td valign="middle" style="white-space: normal;">@item.Description</td>
                                                 <td valign="middle" style="white-space: normal;">
-                                                    <a data-toggle="tooltip" data-placement="top" data-original-title="Remove File" href="#" class="dealer-collect-file btn btn-icon waves-effect waves-light btn-danger" id="@toDelete"><i class="fa fa-times"></i></a>
-                                                    <a data-toggle="tooltip" data-placement="top" data-original-title="Download File" href="@Url.Action("downloadFile", "Dealers", new { path = path })" class="btn btn-icon waves-effect waves-light btn-default"><i class="md-file-download"></i></a>
+                                                    <a data-toggle="tooltip" data-placement="top" data-original-title="Remove File" href="#" class="dealer-collect-file btn btn-icon waves-effect waves-light btn-danger p-lr-5" id="@toDelete"><i class="glyphicon glyphicon-trash"></i></a>
+                                                    <a data-toggle="tooltip" data-placement="top" data-original-title="Download File" href="@Url.Action("downloadFile", "Dealers", new { path = path })" class="btn btn-icon waves-effect waves-light btn-default p-lr-5"><i class="md-file-download"></i></a>
                                                 </td>
                                             </tr>
                                         }
