--- a/corelib/webApp/WebApp/WebApp/Views/Picklist/Index.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Picklist/Index.cshtml
@@ -89,9 +89,11 @@
 
 @section scripts{
 
+    <script src="~/Scripts/datatables/datatables.init.js"></script>
+    <script src="~/Scripts/app/picklist.js"></script>
     <script>
         $(document).ready(function () {
-
+            $picklist.init();
         })
     </script>
 
