--- a/corelib/webApp/WebApp/WebApp/Views/Dealers/dealersTable.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Dealers/dealersTable.cshtml
@@ -68,7 +68,7 @@
 
         $(document).ready(function () {
 
-            TableManageButtons.init("to_datatable");
+            TableManageButtons.init("with_export_btn");
         });
 
     </script>
