Update repo : pisklist

--- a/corelib/webApp/WebApp/WebApp/Content/app.css
+++ b/corelib/webApp/WebApp/WebApp/Content/app.css
@@ -165,7 +165,8 @@
 }
 
 .level0 {
-    background-color: #f5f5f5;
+    /*background-color: #f5f5f5;*/
+    background-color: rgba(236, 236, 236, 0.33);
 }
 
 .level1 td:first-child {
