--- a/corelib/webApp/WebApp/WebApp/Views/Picklist/VehicleTypeView.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Picklist/VehicleTypeView.cshtml
@@ -9,7 +9,7 @@
     <div class="card-box">
 
         <form action="#" class="form-pick-list">
-            
+
             <table cellpadding="1" cellspacing="1" class="datatable-responsive table table-hover dataTable no-footer" id="vehicle-type-table">
                 <thead>
                     <tr>
@@ -28,7 +28,7 @@
                                     <td align="center" style="padding-right:25px;">
 
                                         <a id="@m.VehTypeID" data-toggle="tooltip" data-placement="top" data-original-title="Edit Record" href="#" class="editVehicleType btn btn-icon waves-effect waves-light btn-primary p-lr-5"><i class="md md-border-color"></i></a>
-                                        <a id="@m.VehTypeID" module="fleet_vehicle_type" data-toggle="tooltip" data-placement="top" data-original-title="Remove Record" href="#" class="remove-item btn btn-icon waves-effect waves-light btn-default p-lr-5"><i class="glyphicon glyphicon-trash"></i></a>
+                                        <a id="@m.VehTypeID" filterby="VehTypeID" module="fleet_vehicle_type" data-toggle="tooltip" data-placement="top" data-original-title="Remove Record" href="#" class="remove-item btn btn-icon waves-effect waves-light btn-default p-lr-5"><i class="glyphicon glyphicon-trash"></i></a>
 
                                     </td>
                                 </tr>
