--- a/corelib/webApp/WebApp/WebApp/Views/Shared/_loginLayout.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Shared/_loginLayout.cshtml
@@ -11,6 +11,8 @@
 
     <title>AMS - Company Vehicle</title>
 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" rel="stylesheet" />
+
     <link href="../../Content/theme/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../../Content/theme/css/core.css" rel="stylesheet" />
     <link href="../../Content/theme/css/components.css" rel="stylesheet" />
