--- a/corelib/webApp/WebApp/WebApp/Views/Picklist/AddEditVehicleModel.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Picklist/AddEditVehicleModel.cshtml
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="form-group text-right m-b-0">
-                    <a data-toggle="tooltip" data-placement="left" data-original-title="View vehicle model list" class="btn btn-primary waves-effect waves-light fleet-equipment-model" module="refresh">
+                    <a data-toggle="tooltip" data-placement="left" data-original-title="View vehicle model list" class="btn btn-default waves-effect waves-light fleet-equipment-model" module="refresh">
                         <i class="md md-arrow-back"></i>Back
                     </a>
                     <a class="btn btn-primary waves-effect waves-light" id="btnUpdateVehicleModel">
