--- a/corelib/webApp/WebApp/WebApp/Views/Picklist/Index.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Picklist/Index.cshtml
@@ -19,7 +19,7 @@
                     <a href="#" id="search-string"><i class="fa fa-search"></i></a>
                 </form>
             </div>
-            <div class="card-box">
+            <div class="card-box" id="picklist-container">
                 <!-- Icon sets -->
                 <section>
                     <h4 class="m-t-0 header-title"><i class="md md-settings"></i><b>Fleet</b></h4>
@@ -33,6 +33,7 @@
                         <div class="col-sm-6 col-md-4 col-lg-3 fleet-equipment-makes"><p><i class="md md-layers"></i>Vehicle Makes</p></div>
                         <div class="col-sm-6 col-md-4 col-lg-3 fleet-equipment-model"><p><i class="md md-beenhere"></i>Vehicle Models</p></div>
                         <div class="col-sm-6 col-md-4 col-lg-3 fleet-equipment-series"><p><i class="md md-keyboard-control"></i>Vehicle Series</p></div>
+                        <div class="col-sm-6 col-md-4 col-lg-3 view-ownership"><p><i class="md md-assessment"></i>Ownership</p></div>
                     </div>
                 </section>
 
