--- a/corelib/webApp/WebApp/WebApp/Views/Picklist/ColorsView.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Picklist/ColorsView.cshtml
@@ -2,13 +2,10 @@
 @{
     var model = Model;
 }
-
-
-
 <div class="col-lg-12">
     <div class="card-box">
         <form action="#" class="form-pick-list">
-            <table cellpadding="1" cellspacing="1" class="datatable-responsive table table-hover dataTable no-footer" id="fleet-provinces-table">
+            <table class="datatable-responsive table table-hover dataTable no-footer" id="fleet-provinces-table">
                 <thead>
                     <tr>
                         <th>Vehicle Colors</th>
