--- a/corelib/webApp/WebApp/WebApp/Views/Picklist/vehicleModelView.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Picklist/vehicleModelView.cshtml
@@ -5,8 +5,7 @@
 }
 <div class="col-lg-12 animated fadeIn">
     <div class="card-box" style="height: 550px;overflow: auto;">
-
-        <button type="button" data-toggle="tooltip" data-placement="left" data-original-title="Add new record" id="add-new-item" class="editVehicleModel btn btn-success waves-effect waves-light btn-sm"><i class="fa fa-plus"></i></button>
+        <button type="button" data-toggle="tooltip" data-placement="right" data-original-title="Add new record" id="add-new-item" class="editVehicleModel btn btn-success waves-effect waves-light btn-sm"><i class="fa fa-plus"></i></button>
         <span class="pull-right">
             <input type="text" class="form-control search-from-table" placeholder="Search item">
         </span>
